# Capstone

./: .gitignore  CLAUDE.md  README.md  defense-Jan.html  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
docs/Report/: references.bib  report.tex  structure.md
docs/proposal/: reflexive_forecast_proposal_v3.tex  reflexive_forecast_proposal_v4.tex
docs/superpowers/plans/: 2026-06-09-report-writeup.md  2026-06-25-capstone-poster.md  (+1 more)
notebooks/: README.md  phase_01_baseline_market.ipynb  phase_02_benchmark_validation.ipynb  phase_03_ar_forecast.ipynb  phase_04_stochastic_adoption.ipynb  phase_05_performance_adoption.ipynb  phase_06_experiments_threshold.ipynb  phase_07_evaluation_extensions.ipynb  report_figures.ipynb
poster/: .gitignore  README.md  build.mjs  build.sh  fetch_assets.sh  figures.py  package.json  poster.css  poster.template.html
poster/assets/: figure_values.json
results/data/: phase_01_baseline.npz  phase_02_benchmark.npz  phase_03_ar_forecast.npz  phase_04_stochastic_adoption.npz  phase_05_performance_adoption.npz  phase_06_a_star_grid.npz  phase_07_transaction_costs.npz  poster_result_curve.npz
src/reflexive_market/: __init__.py  adoption.py  forecast.py  market.py  metrics.py  simulate.py  traders.py
tests/: test_package.py  test_phase_01_baseline.py  test_phase_02_benchmark.py  test_phase_03_ar_forecast.py  test_phase_04_stochastic_adoption.py  test_phase_05_performance_adoption.py  test_poster_assets.py  test_poster_figures.py  test_poster_pdf.py  test_poster_schematic.py  test_poster_template.py
(+3 files in other folders)
